package via.easyflow.user.model.internal

data class UserModel(var username: String, var email: String, var password: String) {
}